@@ -1,5 +1,7 @@
 from __future__ import absolute_import, print_function
 
+import re
+
 from django.db import models
 from django.utils import timezone
 
@@ -7,6 +9,9 @@ from sentry.db.models import (
     BoundedPositiveIntegerField, FlexibleForeignKey, Model, sane_repr
 )
 from sentry.utils.cache import memoize
+
+_fixes_re = re.compile(r'\bFixes\s+([A-Za-z0-9_\-\s\,]+)\b', re.I)
+_short_id_re = re.compile(r'\b([A-Z0-9_-]+-[A-Z0-9]+)\b', re.I)
 
 
 class Commit(Model):
@@ -44,3 +49,24 @@ class Commit(Model):
         if len(self.key) == 40:
             return self.key[:12]
         return self.key
+
+    def find_referenced_groups(self):
+        from sentry.models import Group
+
+        if not self.message:
+            return []
+
+        results = set()
+        for fmatch in _fixes_re.finditer(self.message):
+            for smatch in _short_id_re.finditer(fmatch.group(1)):
+                short_id = smatch.group(1)
+                try:
+                    group = Group.objects.by_qualified_short_id(
+                        organization_id=self.organization_id,
+                        short_id=short_id,
+                    )
+                except Group.DoesNotExist:
+                    continue
+                else:
+                    results.add(group)
+        return results
